--- a/templates/404.html
+++ b/templates/404.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Page Not Found</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <title>404 - Not Found</title>
 </head>
 <body>
-    <div class="container">
-        <h1>404 - Page Not Found</h1>
-        <p>Oops! The page you're looking for doesn't exist or may have been moved.</p>
-        <a href="{{ url_for('index') }}" class="back-link">← Back to Fruit List</a>
-    </div>
+    <h1>404 - Fruit Not Found</h1>
+    <p>Sorry, the fruit you're looking for doesn't exist.</p>
+    <a href="{{ url_for('index') }}">Return to home</a>
 </body>
 </html>
+
